--- a/app/src/main/res/xml/keyboard2.xml
+++ b/app/src/main/res/xml/keyboard2.xml
@@ -1,49 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
           android:keyWidth="10%p"
-          android:keyHeight="10%p" >
+          android:keyHeight="7%p" >
     <Row>
-        <Key android:codes="81" android:keyWidth="10%p" android:keyLabel="Q" android:keyEdgeFlags="left"  />
-        <Key android:codes="87" android:keyWidth="10%p" android:keyLabel="W" />
-        <Key android:codes="69" android:keyWidth="10%p" android:keyLabel="E" />
-        <Key android:codes="82" android:keyWidth="10%p" android:keyLabel="R" />
-        <Key android:codes="84" android:keyWidth="10%p" android:keyLabel="T" />
-        <Key android:codes="90" android:keyWidth="10%p" android:keyLabel="Z" />
-        <Key android:codes="85" android:keyWidth="10%p" android:keyLabel="U" />
-        <Key android:codes="73" android:keyWidth="10%p" android:keyLabel="I" />
-        <Key android:codes="79" android:keyWidth="10%p" android:keyLabel="O" />
-        <Key android:codes="80" android:keyWidth="10%p" android:keyLabel="P" android:keyEdgeFlags="right" />
+        <!-- plus -->
+        <Key android:codes="43" android:keyWidth="10%p" android:keyLabel="&#x002B;" android:keyEdgeFlags="left" />
+        <!-- mal -->
+        <Key android:codes="215" android:keyWidth="10%p" android:keyLabel="&#x00D7;" />
+        <!-- teilmenge -->
+        <Key android:codes="8838" android:keyWidth="10%p" android:keyLabel="&#x2286;" android:horizontalGap="6.66%p" />
+        <!-- echte teilmenge -->
+        <Key android:codes="8834" android:keyWidth="10%p" android:keyLabel="&#x2282;" />
+        <!-- und -->
+        <Key android:codes="8743" android:keyWidth="10%p" android:keyLabel="&#x2227;" android:horizontalGap="6.66%p" />
+        <!-- oder -->
+        <Key android:codes="8897" android:keyWidth="10%p" android:keyLabel="&#x22C1;" />
+        <!-- linke geschweifte klammer -->
+        <Key android:codes="123" android:keyWidth="10%p" android:keyLabel="&#x007b;" android:horizontalGap="6.67%p"/>
+        <!-- rechte geschweifte klammer -->
+        <Key android:codes="125" android:keyWidth="10%p" android:keyLabel="&#x007d;" android:keyEdgeFlags="right" />
     </Row>
     <Row>
-        <Key android:codes="65" android:keyWidth="10%p" android:keyLabel="A"  android:keyEdgeFlags="left" android:horizontalGap="5%p" />
-        <Key android:codes="83" android:keyWidth="10%p" android:keyLabel="S" />
-        <Key android:codes="68" android:keyWidth="10%p" android:keyLabel="D" />
-        <Key android:codes="70" android:keyWidth="10%p" android:keyLabel="F" />
-        <Key android:codes="71" android:keyWidth="10%p" android:keyLabel="G" />
-        <Key android:codes="72" android:keyWidth="10%p" android:keyLabel="H" />
-        <Key android:codes="74" android:keyWidth="10%p" android:keyLabel="J" />
-        <Key android:codes="75" android:keyWidth="10%p" android:keyLabel="K" />
-        <Key android:codes="76" android:keyWidth="10%p" android:keyLabel="L" android:keyEdgeFlags="right" />
+        <!-- größer -->
+        <Key android:codes="62" android:keyWidth="10%p" android:keyLabel="&#x003E;" android:keyEdgeFlags="left" />
+        <!-- kleiner -->
+        <Key android:codes="60" android:keyWidth="10%p" android:keyLabel="&#x003C;" />
+        <!-- supermenge -->
+        <Key android:codes="8839" android:keyWidth="10%p" android:keyLabel="&#x2287;" android:horizontalGap="6.66%p" />
+        <!-- echte supermenge -->
+        <Key android:codes="8835" android:keyWidth="10%p" android:keyLabel="&#x2283;" />
+        <!-- implikation -->
+        <Key android:codes="8594" android:keyWidth="10%p" android:keyLabel="&#x2192;" android:horizontalGap="6.66%p" />
+        <!-- äquivalenz -->
+        <Key android:codes="8596" android:keyWidth="10%p" android:keyLabel="&#x2194;" />
+        <!-- komma -->
+        <Key android:codes="44" android:keyWidth="10%p" android:keyLabel="&#x002C;" android:horizontalGap="6.67%p"/>
+        <!-- semikolon -->
+        <Key android:codes="59" android:keyWidth="10%p" android:keyLabel="&#x003B;" android:keyEdgeFlags="right" />
     </Row>
     <Row>
-        <!-- SHIFT -->
-        <Key android:codes="8679" android:keyWidth="15%p" android:keyLabel="&#x21E7;"  android:keyEdgeFlags="left" />
-        <Key android:codes="89"   android:keyWidth="10%p" android:keyLabel="Y" />
-        <Key android:codes="88"   android:keyWidth="10%p" android:keyLabel="X" />
-        <Key android:codes="67"   android:keyWidth="10%p" android:keyLabel="C" />
-        <Key android:codes="86"   android:keyWidth="10%p" android:keyLabel="V" />
-        <Key android:codes="66"   android:keyWidth="10%p" android:keyLabel="B" />
-        <Key android:codes="78"   android:keyWidth="10%p" android:keyLabel="N" />
-        <Key android:codes="77"   android:keyWidth="10%p" android:keyLabel="M" />
-        <!-- DELETE -->
-        <Key android:codes="9003"   android:keyWidth="15%p" android:keyLabel="&#x232b;" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+        <!-- linke klammer -->
+        <Key android:codes="40" android:keyWidth="10%p" android:keyLabel="&#x0028;" android:keyEdgeFlags="left" />
+        <!-- rechte klammer -->
+        <Key android:codes="41" android:keyWidth="10%p" android:keyLabel="&#x0029;" />
+        <!-- vereinigung -->
+        <Key android:codes="8899" android:keyWidth="10%p" android:keyLabel="&#x22C3;" android:horizontalGap="6.66%p" />
+        <!-- differenz -->
+        <Key android:codes="8722" android:keyWidth="10%p" android:keyLabel="&#x2212;" />
+        <!-- true -->
+        <Key android:codes="49" android:keyWidth="10%p" android:keyLabel="true" android:horizontalGap="6.66%p" />
+        <!-- false -->
+        <Key android:codes="48" android:keyWidth="10%p" android:keyLabel="false" />
+        <!-- inversion -->
+        <Key android:codes="39" android:keyWidth="10%p" android:keyLabel="&#x0027;" android:horizontalGap="6.67%p"/>
+        <!-- leere menge -->
+        <Key android:codes="8709" android:keyWidth="10%p" android:keyLabel="&#x2205;" android:keyEdgeFlags="right" />
     </Row>
     <Row>
         <!-- CHANGE KEYBOARD -->
-        <Key android:codes="8888" android:keyWidth="20%p" android:keyLabel="{}" android:popupKeyboard="@xml/keyboard" android:keyEdgeFlags="left" />
-        <!-- SPACE BAR -->
-        <Key android:codes="32" android:keyWidth="62%p" android:keyLabel="" />
-        <!-- ENTER -->
-        <Key android:codes="9166" android:keyWidth="18%p" android:keyLabel="&#x23ce;" android:keyEdgeFlags="right" />
+        <Key android:codes="9999" android:keyWidth="20%p" android:keyLabel="ABC" android:keyEdgeFlags="left"/>
+        <!-- durschschnitt -->
+        <Key android:codes="8898" android:keyWidth="10%p" android:keyLabel="&#x22C2;" android:horizontalGap="6.66%p" />
+        <!-- symmetrische dífferenz-->
+        <Key android:codes="916" android:keyWidth="10%p" android:keyLabel="&#x0394;" />
+        <!-- nicht -->
+        <Key android:codes="172" android:keyWidth="10%p" android:keyLabel="&#x00AC;" android:horizontalGap="6.66%p" />
+        <!-- element -->
+        <Key android:codes="8712" android:keyWidth="10%p" android:keyLabel="&#x2208;" />
+        <!-- DELETE -->
+        <Key android:codes="-5"   android:keyWidth="20%p" android:keyLabel="&#x232b;" android:keyEdgeFlags="right" android:isRepeatable="true" android:horizontalGap="6.67%p" />
+
     </Row>
 </Keyboard>
