--- a/app/src/main/res/xml/keyboard2.xml
+++ b/app/src/main/res/xml/keyboard2.xml
@@ -65,7 +65,7 @@
         <Key android:codes="916" android:keyWidth="10%p" android:keyLabel="&#x0394;" />
         <!-- nicht -->
         <Key android:codes="172" android:keyWidth="10%p" android:keyLabel="&#x00AC;" android:horizontalGap="6.66%p" />
-        <!-- element -->
+        <!-- element von -->
         <Key android:codes="8712" android:keyWidth="10%p" android:keyLabel="&#x2208;" />
         <!-- DELETE -->
         <Key android:codes="-5"   android:keyWidth="20%p" android:keyLabel="&#x232b;" android:keyEdgeFlags="right" android:isRepeatable="true" android:horizontalGap="6.67%p" />
