--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,17 +7,17 @@
     tools:context="com.dhbw.luatraining.QuestionActivity">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Das ist ein Test für die Tastatur"
+        android:text=""
         android:id="@+id/editText"
         android:inputType="none"
-        android:hint="Eingabefeld für die Lösung"/>
+        android:hint="@string/hint_eingabefeld"/>
 
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboardview"
@@ -28,14 +28,4 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:visibility="gone" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_below="@+id/editText"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_marginTop="94dp"/>
 </RelativeLayout>
