--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -17,7 +17,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/dhbw"
+        android:src="@drawable/dhbw_complete"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/logo" />
 
