--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,43 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="Training">
+    <item android:title="@string/training">
         <menu>
             <item
                 android:id="@+id/nav_mengen"
-                android:title="Kapitel 1: Mengen" />
+                android:title="@string/kapitel_1" />
             <item
                 android:id="@+id/nav_relationen"
-                android:title="Kapitel 2: Relationen" />
+                android:title="@string/kapitel_2" />
             <item
                 android:id="@+id/nav_abbildungen"
-                android:title="Kapitel 3: Abbildungen" />
+                android:title="@string/kapitel_3" />
             <item
                 android:id="@+id/nav_boolesche"
-                android:title="Kapitel 4: Boole´sche Algebra" />
+                android:title="@string/kapitel_4" />
             <item
                 android:id="@+id/nav_aussagenlogik"
-                android:title="Kapitel 5: Aussagenlogik" />
+                android:title="@string/kapitel_5" />
+            <item
+                android:id="@+id/nav_klausurmodus"
+                android:title="@string/klausur" />
         </menu>
     </item>
 
-    <item android:title="Sonstiges">
+    <item android:title="@string/sonstiges">
         <menu>
             <item
                 android:id="@+id/nav_problems"
                 android:icon="@drawable/frage"
-                android:title="Eigene Aufgaben" />
+                android:title="@string/eigene_aufgaben" />
             <item
                 android:id="@+id/nav_stats"
                 android:icon="@drawable/stats"
-                android:title="Auswertung" />
+                android:title="@string/auswertung" />
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/settings"
-                android:title="Einstellungen" />
+                android:title="@string/einstellungen" />
             <item
                 android:id="@+id/nav_logging"
                 android:icon="@drawable/settings"
-                android:title="Logging" />
+                android:title="@string/logging" />
         </menu>
     </item>
 
