--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,18 +6,64 @@
     android:layout_height="match_parent"
     tools:context="com.dhbw.luatraining.QuestionActivity">
 
-    <EditText
+    <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/frame"
+        android:layout_margin="20dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text=""
+            android:id="@+id/questionText"
+            android:layout_gravity="start|top"
+            android:gravity="center_vertical|center_horizontal"
+            android:background="@color/accent_material_dark"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/questionImage"
+            android:layout_gravity="end|center_vertical"
+            android:contentDescription="@string/image_question"/>
+    </FrameLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text=""
-        android:id="@+id/editText"
-        android:inputType="none"
-        android:hint="@string/hint_eingabefeld"/>
+        android:layout_below="@+id/frame"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/answer">
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text=""
+            android:id="@+id/answerText"
+            android:inputType="none"
+            android:hint="@string/hint_eingabefeld"
+            android:layout_weight="0.77"/>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="149dp"
+        android:layout_height="wrap_content"
+        android:text="@string/button_next"
+        android:id="@+id/button"
+        android:layout_gravity="end"
+        android:layout_below="@+id/answer"
+        android:layout_alignRight="@+id/answer"
+        android:layout_alignEnd="@+id/answer"
+        android:layout_marginTop="20dp"/>
 
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboardview"
@@ -28,4 +74,5 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:visibility="gone" />
+
 </RelativeLayout>
