--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hier darf sich noch jemand einen schönen Begrüßungstext/-bild ausdenken :)"
-        android:id="@+id/txtView"/>
+        android:text="@string/begrueßung"
+        android:id="@+id/txtView"
+        android:textSize="@dimen/abc_text_size_large_material"/>
 </RelativeLayout>
