--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.dhbw.luatraining.MainActivity">
 
     <TextView
@@ -15,5 +11,6 @@
         android:layout_height="wrap_content"
         android:text="@string/begrueßung"
         android:id="@+id/txtView"
-        android:textSize="@dimen/abc_text_size_large_material"/>
+        android:textSize="20dp"
+        android:padding="30dp"/>
 </RelativeLayout>
