--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -22,7 +22,8 @@
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/chart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -30,19 +31,24 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Kapitelauswahl"
-                    android:id="@+id/textView"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp" />
-
                 <RelativeLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Kapitelauswahl"
+                        android:id="@+id/textView"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:textStyle="bold"
+                        android:textSize="17dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_alignLeft="@+id/switch1"
+                        android:layout_marginLeft="10dp" />
 
                     <Switch
                         android:layout_width="wrap_content"
@@ -50,7 +56,8 @@
                         android:id="@+id/switch1"
                         android:showText="false"
                         android:checked="true"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_below="@+id/textView" />
 
                     <Switch
                         android:layout_width="wrap_content"
@@ -74,8 +81,8 @@
                         android:id="@+id/switch4"
                         android:checked="true"
                         android:layout_gravity="right"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp" />
+                        android:layout_below="@+id/switch3"
+                        android:layout_marginLeft="10dp" />
 
                     <Switch
                         android:layout_width="wrap_content"
@@ -85,8 +92,7 @@
                         android:layout_gravity="left"
                         android:gravity="left"
                         android:layout_below="@+id/switch4"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp" />
+                        android:layout_marginLeft="10dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -131,11 +137,11 @@
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="@string/kapitel_4"
                         android:id="@+id/textView5"
-                        android:layout_toLeftOf="@+id/switch4"
                         android:layout_alignTop="@+id/switch4"
                         android:layout_alignBottom="@+id/switch4"
                         android:textAlignment="center"
-                        android:layout_marginRight="10dp" />
+                        android:layout_toRightOf="@+id/switch4"
+                        android:layout_marginLeft="10dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -143,11 +149,11 @@
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="@string/kapitel_5"
                         android:id="@+id/textView6"
-                        android:layout_toLeftOf="@+id/switch5"
                         android:layout_alignTop="@+id/switch5"
                         android:layout_alignBottom="@+id/switch5"
                         android:textAlignment="center"
-                        android:layout_marginRight="10dp" />
+                        android:layout_toRightOf="@+id/switch5"
+                        android:layout_marginLeft="10dp" />
 
                 </RelativeLayout>
 
