--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -19,12 +19,6 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp">
 
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/chart"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="bottom" />
-
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
@@ -154,6 +148,13 @@
                         android:textAlignment="center"
                         android:layout_toRightOf="@+id/switch5"
                         android:layout_marginLeft="10dp" />
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="bottom"
+                        android:layout_below="@+id/switch5" />
 
                 </RelativeLayout>
 
