--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -19,7 +19,7 @@
             android:id="@+id/questionText"
             android:layout_gravity="start|top"
             android:gravity="center_vertical|center_horizontal"
-            android:background="@color/accent_material_dark"/>
+            android:background="?attr/colorButtonNormal"/>
 
         <ImageView
             android:layout_width="wrap_content"
