--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,7 +10,7 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               android:theme="@style/ThemeOverlay.AppCompat.Dark"
               android:weightSum="1"
-              android:background="@android:color/holo_green_light">
+              android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,7 +19,8 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@drawable/dhbw_complete"
         android:layout_gravity="center_horizontal"
-        android:contentDescription="@string/logo" />
+        android:contentDescription="@string/logo"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,6 +28,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
